Replace non-JDK8 APIs